--- a/Input/How_June_RuD_Met.tex
+++ b/Input/How_June_RuD_Met.tex
@@ -1,4 +1,4 @@
-\poemtitle{EP 1: Chicken Wing Factory - How Ru D. and June Met}
+\poemtitle{EP 1: Chicken Wing Factory - How June and Ru D. Met}
 
 It was just another boring delivery mission from planet Dermania. 
 
@@ -151,7 +151,7 @@ Doctor Wing started chuckling with a low voice. Then suddenly he dashed to where
 Meanwhile, June, who was almost dancing to avoid the random gun shooting and picking up the chicken wings, safely revived all the Dermanians behind the wall. While they were carefully searching for an escape route, Doctor Wing showed up. A startled June spontaneously aimed the Crispy Again Gun at Doctor Wing. Pew.
 
 ``Hey! NOOOOO!!!!!!'' \\
-Doctor Wing's body was restored 10 mins ago. Which means, he was fully healed. \\
+Doctor Wing's body was restored to 10 mins ago. Which means, he was fully healed. \\
 ``HAHAHAHA finally June is useful in this world! Great, wait here, I'll finish off that brat first and then will enjoy crispy chicken wings made by Dermanians!!!''
 
 Doctor Wing locked out everybody and dashed out towards Ru D. at once. Behind a small crack, June could see the second round of the fight. Calming her breath, this time she aimed at Ru D., but Doctor Wing noticed it first. Wing jumped and stretched his arm, blocking the bullet flying to Ru D. while healing Wing's small scars inflicted by Ru D., all gone.
@@ -161,7 +161,7 @@ Ru D. stared at June with blaming eyes. Another flashback was streaming in his h
 ``Ooh! Sorry! I forgot to mention a side effect Doctor! If it is shot twice, it rewinds by 50 years!'' \\
 With the mixture of scratchy sounds and screaming, Doctor Wing's body started to shrink.
  
-When a silence landed, there was a baby inside oversized clothes. Without knowing what just happened, the baby was smiling. \\ \\
+After a brief moment of silence, there was a baby inside oversized clothes. Without knowing what just happened, the baby was smiling. \\ \\
 Ru D. walked towards the baby. He took out his rugged sign pad and got the baby's scribbles on it. \\
 Opening the locked door, Ru D. stared at the Crispy Again Gun in June's hand. And he asked:
 
